src/styles/global.css
html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  background-color: #2d5aaa;
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 18px;
  font-weight: 300;
}

h1 {
  font-size: 2rem;
  font-weight: 400;
}

h2 {
  font-size: 1.33rem;
  font-weight: 300;
}

